# MunicipioAberto

./: .env.example  .gitignore  Dockerfile  INTEGRACAO_APIs.md  README.md  docker-compose.host.yml  docker-compose.yml  pyproject.toml  requirements.txt
civiscope/: manage.py
civiscope/apps/: __init__.py
civiscope/apps/analise/: __init__.py  admin.py  apps.py  models.py  services.py
civiscope/apps/analise/migrations/: 0001_initial.py
civiscope/apps/contratos/: __init__.py  admin.py  apps.py  models.py  services.py
civiscope/apps/contratos/migrations/: 0001_initial.py  0002_rename_contratos_c_muni_id_9f8c33_idx_contratos_c_municip_2454b9_idx_and_more.py
civiscope/apps/empresas/: __init__.py  admin.py  models.py  services.py
civiscope/apps/empresas/migrations/: 0001_initial.py
civiscope/apps/ingestion/: __init__.py  admin.py  api_service.py  apps.py  jobs.py  parsers.py  services.py
civiscope/apps/ingestion/clients/: __init__.py  base.py  dados_abertos.py  ibge.py  pncp.py  schemas.py  transparencia.py  tse.py
civiscope/apps/ingestion/tests/: __init__.py  test_api_service.py  test_base_client.py  test_dados_abertos_client.py  test_ibge_client.py  test_pncp_client.py  test_transparencia_client.py
civiscope/apps/municipios/: __init__.py  admin.py  apps.py  models.py  services.py  urls.py  views.py
civiscope/apps/socios/: __init__.py  admin.py  apps.py  models.py  services.py
civiscope/civiscope/: __init__.py  asgi.py  urls.py  wsgi.py
civiscope/civiscope/settings/: base.py  dev.py  prod.py
civiscope/fixtures/: exemplo_inicial.json
(+19 files in other folders)
